--- a/index.css
+++ b/index.css
@@ -15,6 +15,10 @@ background-image: linear-gradient(315deg, #63a4ff 0%, #83eaf1 74%);
   font-family: 'Poppins', sans-serif; 
   animation : example 10s ease -2s infinite alternate;
 }
+.logo{
+  width: 55px;
+  height: 55px;
+}
 #container{
   width : 40vw;
   background : #fff;
