--- a/index.css
+++ b/index.css
@@ -18,6 +18,10 @@ background-image: linear-gradient(315deg, #63a4ff 0%, #83eaf1 74%);
 .logo{
   width: 55px;
   height: 55px;
+  border-radius: 50%;
+}
+.logo img{
+  border-radius: 50%;
 }
 #container{
   width : 40vw;
